# FinBot

./: .env.example  .gitignore  README.md  config.py  constants.py  database.py  install.bat  keyboards.py  main.py  pyproject.toml  reports.py  requirements.txt  services.py  start.bat  states.py  texts.py  utils.py
handlers/: __init__.py  budgets.py  export.py  history.py  navigation.py  reports.py  start.py  transactions.py
