[project]
name = "finbot"
version = "2.0.0"
description = "Telegram-бот для управління особистими фінансами"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4.0",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["config", "constants", "database", "handlers", "keyboards", "reports", "services", "states", "texts", "utils"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
